--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <section class="overview-hero">
             <div class="container">
                 <div class="overview-hero-image">
-                    <img src="#" alt="">
+                    <img src="./images/running.png" alt="">
                 </div>
                 <div class="overview-hero-text">
-                    <h2>Live  your healthiest life now!</h2>
+                    <h2>Live your healthiest life now!</h2>
                     <p>At INFO2180 Labs we’re committed to improving the lives of as many people as possible. One of the most important areas in which we’re striving to do that is health.</p>
                 </div>
             </div>
@@ -39,21 +39,21 @@
                 <h2>Learn About</h2>
                 <div class="cards">
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="./images/lifestyle.png" alt="">
                         <div class="card-body">
                             <h3>Artificial Intelligence</h3>
                             <p>Learn how our innovations in machine learning are making a positive impact on healthcare.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="./images/lifestyle.png" alt="">
                         <div class="card-body">
                             <h3>Fitness+ Tracker</h3>
                             <p>Fitness+ is our new, engaging and personalized fitness tracking app experience designed to help you stay in shape and feel great.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="#" alt="">
+                        <img src="./images/lifestyle.png" alt="">
                         <div class="card-body">
                             <h3>Healthy Lifestyle</h3>
                             <p>Being healthy should be part of your overall lifestyle. Living a healthy lifestyle can help prevent chronic diseases and long-term illnesses.Take control of your life with these 5 simple steps.</p>
